--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DiRecall</string>
+    <string name="title_github_repo">Github Repos</string>
+    <string name="title_github_user_details">Github User Details</string>
+    <string name="title_github_user_list">Github Users</string>
 </resources>
