Add single dynamic feature module into Sber modular arch

--- a/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/values/strings.xml
+++ b/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
+    <string name="btn_github_gist_list">Gists</string>
     <string name="btn_github_repo_list">Repositories</string>
 </resources>
