--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DiRecall</string>
+    <string name="title_github_user_gists">Github User Gists</string>
 </resources>
