--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DiRecall</string>
     <string name="title_github_user_gists">Github User Gists</string>
+    <string name="title_github_user_organizations">Github User Organizations</string>
 </resources>
