Add fully powered feature - library + DFM

--- a/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/values/strings.xml
+++ b/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="btn_github_follower_list">Followers</string>
     <string name="btn_github_gist_list">Gists</string>
     <string name="btn_github_organization_list">Organizations</string>
     <string name="btn_github_repo_list">Repositories</string>
