--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DiRecall</string>
     <string name="title_github_user_gists">Github User Gists</string>
     <string name="title_github_user_organizations">Github User Organizations</string>
+    <string name="title_github_user_followers">Github User Followers</string>
 </resources>
