--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DiRecall</string>
+    <string name="title_github_user_details">Github User Details</string>
     <string name="title_github_user_gists">Github User Gists</string>
     <string name="title_github_user_organizations">Github User Organizations</string>
     <string name="title_github_user_followers">Github User Followers</string>
