Implement :demo-app for :GithubUserProfile feature with fake other feature dependencies

--- a/Feature/GithubUserProfile/Demo/src/main/res/values/strings.xml
+++ b/Feature/GithubUserProfile/Demo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Github User Profile Demo</string>
+    <string name="app_name">:demo_GithubUserProfile</string>
 </resources>
