ANDROIDSTUDY-T-19: New Feature: list of github gist for a given user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">DiRecall</string>
     <string name="btn_github_repo_list">Repositories</string>
+    <string name="btn_github_gist_list">Gist</string>
+    <string name="btn_github_org_list">Organizations</string>
+    <string name="btn_github_followers_list">Followers</string>
 </resources>
